--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,19 @@ jobs:
           java-version: 21
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
+      - name: Cache Hytale Server
+        uses: actions/cache@v4
+        with:
+          path: |
+            hytale/libs/HytaleServer.jar
+            hytale/build/download/hytale-downloader-linux-amd64
+          key: ${{ runner.os }}-hytale-download
+          restore-keys: |
+            ${{ runner.os }}-hytale-
+      - name: Download Hytale Server
+        env:
+          HYTALE_DOWNLOADER_CREDENTIALS: ${{ secrets.HYTALE_DOWNLOADER_CREDENTIALS }}
+        run: ./gradlew :hytale:download-server
       - name: Build with Gradle
         run: ./gradlew build
       - name: Test with Gradle
