--- a/hytale/example-plugin/src/main/resources/manifest.json
+++ b/hytale/example-plugin/src/main/resources/manifest.json
@@ -1,16 +1,16 @@
 {
   "Group": "com.example",
   "Name": "Example Plugin",
-  "version": "1.0.0",
-  "description": "An example plugin for Hytale",
-  "authors": [
+  "Version": "1.0.0",
+  "Description": "An example plugin for Hytale",
+  "Authors": [
     {
-      "name": "Your Name",
-      "email": "yourname@example.com",
-      "url": "https://yourname.example.com"
+      "Name": "Your Name",
+      "Email": "yourname@example.com",
+      "URL": "https://yourname.example.com"
     }
   ],
-  "website": "https://example.com/example-plugin",
-  "serverVersion": "*",
-  "main": "com.example.ExamplePlugin"
+  "Website": "https://example.com/example-plugin",
+  "ServerVersion": "*",
+  "Main": "com.example.ExamplePlugin"
 }
