Don't ask me why but now it works

--- a/hytale/example-plugin/src/main/resources/manifest.json
+++ b/hytale/example-plugin/src/main/resources/manifest.json
@@ -1,6 +1,6 @@
 {
-  "group": "com.example",
-  "name": "Example Plugin",
+  "Group": "com.example",
+  "Name": "Example Plugin",
   "version": "1.0.0",
   "description": "An example plugin for Hytale",
   "authors": [
